discussion/kv_engine/127011/127011_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: use cb::couchstore::getHeader()

This is a preparation for adding support for PiTR where we need
the timestamp for the header (which isn't available through
couchstore_db_info), and as an extra bonus we can kill all the
code related to error handling as cb::couchstore::getHeader
can't fail (neither could couchstore_db_info unless one
pass invalid arguments)

Change-Id: Ib504d88039e12816fa8145efcb9d1d9433a31e76

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-04-30 21:41:24.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-30 21:56:46.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27926/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1432): error C2065: "info": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27926/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23891/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1432:51:
error: use of undeclared identifier "info"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23891/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2056/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1432:51: error: use of undeclared identifier "info" [clang-diagnostic-error]
                                                  info.last_sequence);
                                                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2056/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1432:51:
error: use of undeclared identifier "info" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2056/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2562/ : FAILURE

Compile error at [2020-04-30T21:43:22.597Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1432:51:
error: use of undeclared identifier "info"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2562/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3504/ : FAILURE

Compile error at [2020-04-30T21:53:43.269Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1432:51:
error: ?info? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3504/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3481/ : FAILURE

Compile error at [2020-04-30T21:43:04.704Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1432:51:
error: ?info? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3481/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3560/ : FAILURE

Compile error at [2020-04-30T21:43:02.195Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1432:51:
error: ?info? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3560/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11351/ : FAILURE

Compile error at [2020-04-30T21:45:35.511Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1432:51:
error: ?info? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11351/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/574/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
